# my-garmin-coach

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile.prod  PLAN.md  README.md  RELEASING.md  STATUS.md  docker-compose.prod.yml  docker-compose.yml  render.yaml  test_garmin_login.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2df1d0e5fe3a_add_is_admin_to_user.py  460d2c67b829_add_refresh_token_table.py  70bc7c18d5b7_initial_schema.py  7cd1f83b9815_initial_schema.py  a1b2c3d4e5f6_add_garmin_schedule_id.py  a2a3b4c5d678_add_garmin_credential_fields.py  a3f8c21e904b_add_google_oauth_sub_to_user.py  ac94d620adfe_strength_sport_columns_and_index.py  b4e2f1a3c789_drop_unused_password_auth_columns.py  c5d2e7f4a123_add_garmin_activity_table.py  d4e9a2b1c567_add_training_plan.py  e6f3a0b2d891_add_plan_coach_message.py  f1a2b3c4d567_backfill_description_from_steps.py  g2a3b4c5d678_add_garmin_credential_fields.py  h3b4c5d6e789_add_system_config_and_auth_version.py  i4c5d6e7f890_add_sport_to_scheduledworkout.py  i4c5d6e7f890_preview_db_test.py
backend/scripts/: compare_garmin_workouts.py  create_admin.py  fetch_garmin_activity.py  migrate_add_user_id.py  try_it.py  unsynced_workouts.py
backend/src/api/: app.py  dependencies.py  schemas.py
backend/src/auth/: dependencies.py  jwt.py  models.py  passwords.py  schemas.py  service.py
backend/src/core/: cache.py  config.py
backend/src/db/: database.py  models.py
backend/src/garmin/: adapter.py  adapter_protocol.py  dedup.py  (+17 more)
backend/tests/: conftest.py
(+342 files in other folders)
